--- a/TikTacToeGame/app/src/main/res/layout/fragment_game.xml
+++ b/TikTacToeGame/app/src/main/res/layout/fragment_game.xml
@@ -14,12 +14,9 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_margin="30dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_view_block">
-
-
     </androidx.recyclerview.widget.RecyclerView>
 
 </layout>
