--- a/TikTacToeGame/app/src/main/res/layout/item_view_block.xml
+++ b/TikTacToeGame/app/src/main/res/layout/item_view_block.xml
@@ -8,7 +8,7 @@
         
         <variable
             name="block"
-            type="com.r4ziel.tiktactoegame.Block" />
+            type="com.r4ziel.tiktactoegame.entities.Block" />
 
         <variable
             name="blockItemClick"
